force-app/main/default/objects/OrgChartPlus__MSO_OrgChart2Relationship__c/OrgChartPlus__MSO_OrgChart2Relationship__c.object-meta.xml
<CustomObject>
    <description>Chart specific contact relationships</description>
    <label>MSO OrgChart Relationship</label>
    <nameField>
        <displayFormat>MOR-{000000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MSO OrgChart Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>