force-app/main/default/objects/OrgChartPlus__MSO_OrgChart2Relationship__c/fields/OrgChartPlus__ChildEntity__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__ChildEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Entity</label>
    <referenceTo>OrgChartPlus__MSO_OrgChart2Entity__c</referenceTo>
    <relationshipLabel>MSO OrgChart Relationships (Child Entity)</relationshipLabel>
    <relationshipName>OrgChart_Child_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>