force-app/main/default/objects/OrgChartPlus__MSO_OrgChart2Relationship__c/fields/OrgChartPlus__ChildTeamMember__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__ChildTeamMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child TeamMember</label>
    <referenceTo>OrgChartPlus__MSO_OrgChart2TeamMember__c</referenceTo>
    <relationshipLabel>MSO OrgChart Relationships</relationshipLabel>
    <relationshipName>MSO_OrgChart_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>