force-app/main/default/objects/OrgChartPlus__MSO_OrgChart2Relationship__c/fields/OrgChartPlus__ParentEntity__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__ParentEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Entity</label>
    <referenceTo>OrgChartPlus__MSO_OrgChart2Entity__c</referenceTo>
    <relationshipLabel>MSO OrgChart Relationships</relationshipLabel>
    <relationshipName>OrgChart_Parent_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>