force-app/main/default/objects/OrgChartPlus__MSO_OrgChart2Relationship__c/fields/OrgChartPlus__ParentTeamMember__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__ParentTeamMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent TeamMember</label>
    <referenceTo>OrgChartPlus__MSO_OrgChart2TeamMember__c</referenceTo>
    <relationshipLabel>MSO OrgChart Relationships (Parent TeamMember)</relationshipLabel>
    <relationshipName>MSO_OrgChart_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>