force-app/main/default/objects/OrgChartPlus__MSO_OrgChart2Relationship__c/fields/OrgChartPlus__Type__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manager</fullName>
                <default>true</default>
                <label>Manager</label>
            </value>
            <value>
                <fullName>Knows</fullName>
            </value>
            <value>
                <fullName>Influences</fullName>
            </value>
            <value>
                <fullName>Collaborates</fullName>
            </value>
            <value>
                <fullName>Socialises</fullName>
            </value>
            <value>
                <fullName>Supplies</fullName>
            </value>
            <value>
                <fullName>Supporter of</fullName>
            </value>
            <value>
                <fullName>In Conflict with</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>